--- a/mw_insider/pubspec.yaml
+++ b/mw_insider/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mw_insider
-description: A new Flutter project.
+description: Rediscover your home
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -36,6 +36,8 @@ dependencies:
   get: ^4.6.5
   get_storage: ^2.0.3
   http: ^0.13.4
+  flutter_secure_storage: ^5.0.2
+  jwt_decode: ^0.3.1
 
 dev_dependencies:
   flutter_test:
