--- a/mw_insider/pubspec.yaml
+++ b/mw_insider/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^0.13.4
   flutter_secure_storage: ^5.0.2
   jwt_decode: ^0.3.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
