--- a/mw_insider/android/app/src/main/AndroidManifest.xml
+++ b/mw_insider/android/app/src/main/AndroidManifest.xml
@@ -2,10 +2,16 @@
     package="com.example.mw_insider">
     <!-- Required to fetch data from the internet. -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <application
         android:label="mw_insider"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <receiver android:name="com.intivoto.flutter_geofence.GeofenceBroadcastReceiver" android:enabled="true" android:exported="true"/>
+        <service android:name="com.intivoto.flutter_geofence.FlutterGeofencePlugin" android:permission="android.permission.BIND_JOB_SERVICE" android:exported="true"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
