--- a/mw_insider/pubspec.yaml
+++ b/mw_insider/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   jwt_decode: ^0.3.1
   intl: ^0.17.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
