--- a/mw_insider/android/app/src/main/AndroidManifest.xml
+++ b/mw_insider/android/app/src/main/AndroidManifest.xml
@@ -5,13 +5,11 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <application
         android:label="mw_insider"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-
-        <receiver android:name="com.intivoto.flutter_geofence.GeofenceBroadcastReceiver" android:enabled="true" android:exported="true"/>
-        <service android:name="com.intivoto.flutter_geofence.FlutterGeofencePlugin" android:permission="android.permission.BIND_JOB_SERVICE" android:exported="true"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
