--- a/mw_insider/pubspec.yaml
+++ b/mw_insider/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   jwt_decode: ^0.3.1
   intl: ^0.17.0
   shared_preferences: ^2.0.15
+  geolocator: ^8.2.1
 
 dev_dependencies:
   flutter_test:
