--- a/mw_insider/pubspec.yaml
+++ b/mw_insider/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.17.0
   shared_preferences: ^2.0.15
   geolocator: ^8.2.1
+  geocoding: ^2.0.4
 
 dev_dependencies:
   flutter_test:
