--- a/mw_insider/pubspec.yaml
+++ b/mw_insider/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   intl: ^0.17.0
   geolocator: ^8.2.1
   geocoding: ^2.0.4
+  flutter_map: any
+  latlong2: ^0.8.1
+  flutter_map_location_marker: any
+  flutter_map_marker_cluster: any
 
 dev_dependencies:
   flutter_test:
