App icon boundaries added

--- a/insighter/pubspec.yaml
+++ b/insighter/pubspec.yaml
@@ -102,6 +102,6 @@ flutter:
 flutter_icons:
   image_path: "assets/icon/Insighter.png"
   adaptive_icon_foreground: "assets/icon/Insighter.png"
-  adaptive_icon_background: "#5a09c3"
+  adaptive_icon_background: "#F4ECFE"
   android: true
   ios: true
